// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async getState 1`] = `
Array [
  Object {
    "count": 0,
    "foo": "bar",
  },
  Object {
    "tag": "computed",
    "value": 3,
  },
]
`;

exports[`send message 1`] = `
State {
  "events": Set {},
  "state": Array [
    Object {
      "count": 0,
      "foo": "bar",
    },
    Object {
      "tag": "computed",
      "value": 3,
    },
  ],
}
`;

exports[`send message 2`] = `
State {
  "events": Set {
    "hello",
    "how r u",
  },
  "state": Array [
    Object {
      "count": 0,
      "foo": "bar",
    },
    Object {
      "tag": "computed",
      "value": 3,
    },
  ],
}
`;

exports[`smoke 1`] = `
State {
  "events": Set {
    "hello",
    "how r u",
  },
  "state": Array [
    Object {
      "count": 0,
      "foo": "bar",
    },
    Object {
      "tag": "computed",
      "value": 3,
    },
  ],
}
`;
